Add pokemon information details

--- a/src/App.css
+++ b/src/App.css
@@ -9,5 +9,6 @@
 }
 
 .navbar {
-  background-color: #ef5350 !important;
+  /* background-color: #ef5350 !important; */
+  background-color: #000 !important;
 }
